# CONTROLADOR-CAIXA-DAGUA-ESP-IDF

./: README.md
doc/: bloco_hardware
project-embarcados_2/: CMakeLists.txt
project-embarcados_2/main/: CMakeLists.txt  main.c
project-embarcados_2/main/components/DS18B20/: DS18B20.c  DS18B20.h
project-embarcados_2/main/components/DS18B20/DallasOneWire/drivers/: ow_driver_esp32_usart.c
project-embarcados_2/main/components/DS18B20/DallasOneWire/onewire/: onewire.h
project-embarcados_2/main/components/HC_SR04/: HC_SR04.c  HC_SR04.h
project-embarcados_2/main/components/MotorControl/: MotorControl.c  MotorControl.h
project-embarcados_2/main/components/RelayModule/: RelayModule.c  RelayModule.h
